--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <br>
     <a href="paginas/exemplo02-imagens.html">Series</a>
 
+    <a href="paginas/exemplo03-listas.html">Listas</a>
+
 </body>
 
 </html>
