--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="paginas/exemplo02-imagens.html">Series</a>
     <br>
     <a href="paginas/exemplo03-listas.html">Listas de Carros</a>
+    <br>
+    <a href="paginas/exemplo04-tabelas.html">Tabelas</a>
 
 </body>
 
