--- a/paginas/exemplo04-tabelas.html
+++ b/paginas/exemplo04-tabelas.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h1>Lista de Pontis Turísticos</h1>
+    <h1>Lista de Pontos Turísticos</h1>
     <table border = "1">
     <!-- thead=> cabeçalho da tabela-->
     <!-- tr=> linha-->
