Inclui coluna na tabela

--- a/paginas/exemplo04-tabelas.html
+++ b/paginas/exemplo04-tabelas.html
@@ -65,11 +65,22 @@
 		    <button>Adicionar Carrinho</button>
 		</td>
 	    </tr>
-	<tbody
-
-
-
-
+	</tbody
+	<tbody>
+	    <tr>
+		<td>
+		   <img alt="Imagem Arena Corinthians"
+       		    width="150px"
+        	    src="https://cdn.meutimao.com.br/fotos-do-corinthians/w614/2024/11/24/mosaico_da_torcida_do_corinthians_diante_do_t2bk.jpg">		
+		</td>		    
+		<td>Arena Corinthians</td>
+		<td>PT-BR</td>
+		<td>R$ 500,00</td>
+		<td>
+		    <button>Adicionar Carrinho</button>
+		</td>
+	    </tr>
+	</tbody>
     </table>
 </body>
 </html>
