correção de texto

--- a/paginas/exemplo04-tabelas.html
+++ b/paginas/exemplo04-tabelas.html
@@ -43,7 +43,7 @@
        		    width="150px"
         	    src="https://res.cloudinary.com/hello-tickets/image/upload/c_limit,f_auto,q_auto,w_1300/v1645846296/rg73rgkb4xsiigqzd3ab.jpg">		
 		</td>		    
-		<td>Museu do Luvre</td>
+		<td>Museu do Louvre</td>
 		<td>Francês</td>
 		<td>R$ 20000,00</td>
 		<td>
