--- a/paginas/exemplo04-tabelas.html
+++ b/paginas/exemplo04-tabelas.html
@@ -24,6 +24,8 @@
 	<tbody>
 	    <tr>
     <!-- td=> linha coluna-->
+	<!-- tbody => corpo da tabela-->
+
 		<td>
 		   <img alt="Imagem do Cristo Redentor"
        		    width="150px"
