--- a/paginas/exemplo05-tudo.html
+++ b/paginas/exemplo05-tudo.html
@@ -8,6 +8,7 @@
     <title>SuperDev - Jogos</title>
 </head>
 <body>
+    <a href="../index.html">Voltar</a>
     <h1>Jogos</h1>
     <h2>FPS</h2>
     <ul>
