criei nova pasta de exercicios

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <br>
     <a href="paginas/exemplo05-tudo.html">Jogos</a>
 
+    <a href="exercicios/exercicios.html">Exercicios</a>
+
 </body>
 
 </html>
