--- a/paginas/exemplo04-tabelas.html
+++ b/paginas/exemplo04-tabelas.html
@@ -9,22 +9,21 @@
 <body>
 	<a href="../index.html">Voltar</a>
     <h1>Lista de Pontos Turísticos</h1>
-    <table border = "1">
+    <table border="1">
     <!-- thead=> cabeçalho da tabela-->
-    <!-- tr=> linha-->
-    <!-- th=> coluna-->
+    <!-- tr=> define uma linha (table row)-->
+    <!-- th=> célula de cabeçalho (table header, fica em negrito por padrão -->
         <thead>
 	    <tr>
 	        <th>Imagem</th>
 	        <th>Nome</th>
 	        <th>Idioma</th>
 	        <th>Preço</th>
-		<th></th>
-	    <tr>
+		    <tr>
         </thead>
 	<tbody>
 	    <tr>
-    <!-- td=> linha coluna-->
+    <!-- td=> célula de dado (table data, conteúdo normal)-->
 	<!-- tbody => corpo da tabela-->
 
 		<td>
@@ -68,7 +67,7 @@
 		    <button>Adicionar Carrinho</button>
 		</td>
 	    </tr>
-	</tbody
+	</tbody>
 	<tbody>
 	    <tr>
 		<td>
