inclui os exercicios

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>Bem vindo ao sistema do SuperDev</h1>
     <!-- Tag a é uma ancora, serve ara navergar para uma outra parte do sistema -->
 
+
+    <a href="paginas/exercicios/exercicios.html">Exercicios</a>
+    <br>
     <a href="paginas/exemplo01-imagens.html">Filmes</a>
     <br>
     <a href="paginas/exemplo02-imagens.html">Series</a>
@@ -20,8 +23,6 @@
     <a href="paginas/exemplo04-tabelas.html">Tabelas</a>
     <br>
     <a href="paginas/exemplo05-tudo.html">Jogos</a>
-
-    <a href="exercicios/exercicios.html">Exercicios</a>
 
 </body>
 
