--- a/paginas/exercicios/exercicios.html
+++ b/paginas/exercicios/exercicios.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicios</title>
+    <title>Exercicios - SuperDev</title>
 </head>
 
 <body>
+    <a href="../../index.html">Voltar</a>
+
     <h1>Exercicios</h1>  
     <hr>
-    <h2>Aqui estão todos meu exercicios da aula 1</h2>
+    <h3>Aqui estão todos meu exercicios da aula 1</h3>
 
     <ul>
-        <li><a href="paginas/ex-01.html">Exercicio 1</a></li>
-
-
+        <li>
+            <a href="ex-01.html">Exercicio 1</a>
+        </li>
+        <li>
+            <a href="ex-02.html">Exercicio 2</a>
+        </li>
+        <li>
+            <a href="ex-03.html">Exercicio 3</a>
+        </li>
     </ul>
 </body>
-</html>1
+</html>
