criei o formulario do paciente

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <a href="paginas/exercicios/exercicios.html">Exercicios</a>
     <br>
+    <a href="paginas/exemplo06-formulario-paciente.html">Agendamento Paciente</a>
+    <br>
+    <a href="paginas/exemplo07-detalhes-agendamento.html">Detalhes Agendamento</a>
+    <br>
     <a href="paginas/exemplo01-imagens.html">Filmes</a>
     <br>
     <a href="paginas/exemplo02-imagens.html">Series</a>
@@ -22,8 +26,7 @@
     <br>
     <a href="paginas/exemplo04-tabelas.html">Tabelas</a>
     <br>
-    <a href="paginas/exemplo05-tudo.html">Jogos</a>
-
+    <a href="paginas/exemplo05-tudo.html">Jogos</a>    
 </body>
 
 </html>
